infrastructure/ethereum-public/ropsten/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ropsten-archive
  labels:
    app: synced-ropsten
  namespace: ropsten-nodes-fullsync
spec:
  type: ClusterIP
  selector:
    app: synced-ropsten
  ports:
    - port: 30303
      targetPort: 30303
      protocol: UDP
      name: dev-p2p-udp
    - port: 30303
      targetPort: 30303
      protocol: TCP
      name: dev-p2p-tcp
    - port: 8545
      targetPort: 8545
      protocol: TCP
      name: http
    - port: 8546
      targetPort: 8546
      protocol: TCP
      name: ws
